[package]
name = "lab-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
libp2p = {version="0.41.1", features=["tcp-tokio", "mdns", "floodsub", "mplex", "yamux", "gossipsub"]}
futures = "0.3.19"
env_logger = "0.9.0"
