[package]
name = "lab-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
libp2p = {version="0.41.1", features=["tcp-tokio", "mdns", "floodsub", "mplex", "yamux", "gossipsub"]}
futures = "0.3.19"
env_logger = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
systemstat = {version="0.1.10", features=["serde"]}
os_info = "3"
hostname = "^0.3"
anyhow = "1"

comfy-table = "5.0.0"
crossterm = "0.22.1"
humantime = "2.1.0"